[tool.cibuildwheel]
build = ["cp38-*"]
archs = ["auto64"]

[tool.cibuildwheel.linux]
before-all = """
    git clone https://github.com/Restream/reindexer.git
    cd reindexer
    ./dependencies.sh
    mkdir -p build && cd build
    cmake ..
    make -j4
    make install
    cd ../..
    rm -rf reindexer/
"""
manylinux-x86_64-image = "manylinux_2_28"
skip = ["*musllinux*"]

[tool.cibuildwheel.macos]
before-all = """
    git clone https://github.com/Restream/reindexer.git
    cd reindexer
    ./dependencies.sh
    mkdir -p build && cd build
    cmake ..
    make -j4
    sudo make install
    cd ../..
    sudo rm -rf reindexer/
"""
archs = ["arm64"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11",
    "build"
]
build-backend = "setuptools.build_meta"
