[tool.cibuildwheel]
build = ["cp38-*"]
archs = ["auto64"]

[tool.cibuildwheel.linux]
before-all = """
    git clone https://github.com/Restream/reindexer.git
    cd reindexer
    ./dependencies.sh
    mkdir -p build && cd build
    cmake ..
    make -j4
    make install
    cd ../..
    rm -rf reindexer/
"""
manylinux-x86_64-image = "manylinux_2_28"
skip = ["*musllinux*"]

[tool.cibuildwheel.macos]
before-all = """
    git clone https://github.com/Restream/reindexer.git
    cd reindexer
    ./dependencies.sh
    mkdir -p build && cd build
    cmake ..
    make -j4
    sudo make install
    cd ../..
    sudo rm -rf reindexer/
"""
archs = ["arm64"]

[tool.cibuildwheel.windows]
before-build = """
    conda install openblas -y
    cd C:\\temp\\reindexer
    git clone https://github.com/Restream/reindexer.git
    mkdir build && cd build
    cmake -G "Visual Studio 18 2026" .. -Ax64
    cmake --build . --config Release /p:MultiProcessorCompilation=true --parallel 4
    cmake --install . --config Release --prefix C:\\reindexer-install
    cd ..\\..
"""
archs = ["auto64"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11",
    "build"
]
build-backend = "setuptools.build_meta"
